--- a/index/00-acknowledgements.Rmd
+++ b/index/00-acknowledgements.Rmd
@@ -3,4 +3,8 @@ body {
 text-align: justify}
 </style>
 
-THIS IS WHERE YOU THANK PEOPLE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+First of all, I would like to say a huge thanks to my supervisors Professor Ingeborg Hers and Professor Nicholas Timpson for their guidance and advice throughout my PhD. I have felt supported when I have needed it, but also feel like I have been given the independence and academic freedom, which I will take forward into my career. It goes without saying that this work would not have been possible without the British Heart Foundation Integrative Cardiovascular Science PhD programme, along with the funding I received from the University of Bristol alumni. 
+
+Thank you to all the members of Bristol Platelet Group and Team Timpson who have been so encouraging, supportive and willing to help me, especially in the early stages of my PhD. Although interrupted by the pandemic, I enjoyed all the pub trips and socials that I attended when they were allowed!
+
+I would also like to thank my family and friends for their support throughout my PhD. To my flat mates of 3.5 years, Tessa and Josie, thanks for the support and motivation to keep going, especially in each lockdown when all we saw was each other. And lastly, thank you to Harry. Whether it be sending gifts for abstracts being accepted, printing out my first publication into a booklet or just offering words of encouragement, he has been a rock through it all!
