--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -3,7 +3,10 @@ body {
 text-align: justify}
 </style>
 
-My abstract will go here and it will be a solid abstract. Full of the things that go in abstracts. Such as numbers, acronyms, other words, and lots of punctuation. <br>
+Variation in adiposity is associated with thrombotic outcomes, but mechanisms leading from this exposure to disease are unclear. The overall aims were to assess the effect of adiposity on platelet function (key cells involved in thrombosis) and identify potential mechanisms. 
 
-It will have multiple paragraphs too!
+Data from INTERVAL (a UK study of blood donors), COPTIC (Bristol-based cardiac surgery cohort) and DiRECT (Diabetes REmission Clinical Trial in Glasgow/Newcastle) were used. The effect of body mass index (BMI) on platelet traits measured by Sysmex XN-1000 was assessed in INTERVAL (N=33,388) using Mendelian randomization (MR). The association between platelet traits and platelet function was explored using linear regression in COPTIC (N=655). Bariatric patient (BMI >40kg/m2) platelet function was also compared with controls (BMI 18.5-25kg/m2). MR evidence in INTERVAL suggested that higher BMI raises immature platelet count (IPC - newly produced platelets). Results from COPTIC indicated that greater IPC is associated with greater platelet aggregation. Validation work in a specifically designed study of bariatric patients and healthy weight controls is ongoing.
 
+To identify the involvement of the circulating proteome in adiposity-related platelet changes, the causal effect of BMI on >3600 proteins measured by SomaLogic was estimated using MR (N=2,737). To complement this, the effect of weight loss on the serum proteome was examined using linear regression in the DiRECT cohort (N=265). Adiposity had a substantial effect on the plasma proteome: higher BMI raised levels of leptin and fumarylacetoacetase while reducing sex hormone binding-globulin levels. 
+
+These analyses suggest that higher BMI raises immature platelet count (newly produced platelets), which are pro-thrombotic. The proteomic analyses from different study designs point towards potential proteins which may influence platelet production and function which require further investigation. Future analyses would include developing approaches to compare protein profiles across cohorts. Overall, these analyses provide novel mechanistic insight into how higher BMI causes disease.
