--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -1,123 +1,277 @@
-# Mathematics and Science {#math-sci}
+# Higher body mass index raises immature platelet count: evidence from Mendelian randomization analyses
 
-<!-- Required to number equations in HTML files -->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
+This work is under review at xxxxxxxxx and is on the preprint server MedRXiV [@Goudswaard2021.05.19.21257443]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
-## Math
+```{r INTERVAL-STROBE, echo = FALSE, out.height="80%", out.width="80%", fig.cap="A STROBE diagram outlining participants included in the INTERVAL study (N=33388)."}
+include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 
-\TeX\ is the best way to typeset mathematics. Donald Knuth designed \TeX\ when he got frustrated at how long it was taking the typesetters to finish his book, which contained a lot of mathematics.  One nice feature of _R Markdown_ is its ability to read LaTeX code directly.
-
-If you are doing a thesis that will involve lots of math, you will want to read the following section which has been commented out. If you're not going to use math, skip over or delete this next commented section.
+```
 
 
-<!-- MATH and PHYSICS majors: Uncomment the following section -->
-<!--
-$$\sum_{j=1}^n (\delta\theta_j)^2 \leq {{\beta_i^2}\over{\delta_i^2 + \rho_i^2}}
-\left[ 2\rho_i^2 + {\delta_i^2\beta_i^2\over{\delta_i^2 + \rho_i^2}} \right] \equiv \omega_i^2
-$$
+```{r Platelet-traits,  echo=FALSE}
+options(knitr.kable.NA = "")
+Name = c('P-LCR','H-IPF','PLT (F)','PLT (I)','PCT','PDW','IPC','IPF','MPV','SFL','FSC','SSC')
+FullName = c('Platelet large cell ratio','High fluorescence immature platelet fraction','Platelet count (PLT-F channel)','Platelet count (impedance channel)','Plateletcrit','Platelet distribution width' ,'Immature platelet count' ,'Immature platelet fraction','Mean platelet volume','Side fluorescence', 'Forward scatter','Side scatter')
+Deriv = c('(platelet number with volume>12 fL)/(platelet number of ordinary volume)  x 100', '(high fluorescence immature platelet number)/(platelet count)  x 100','Total number of platelets per litre','Total number of platelets per litre','Volume percentage of blood occupied by platelets','Standard deviation of platelet volume distribution, estimated as width at 20% modal height of platelet volume histogram','Immature platelet count','(Immature platelet number)/(platelet count)   x 100', 'Mean platelet volume','Side fluorescence measures the nucleic acid (mRNA) content of the platelet','Forward scatter is a measure of the size of the platelet' ,'Side scatter is a measure of the granularity of the platelet')
 
-From Informational Dynamics, we have the following (Dave Braden):
+Units <- c('%','%','109/L','109/L','%','fL','109/L','%','fL','RFUs','RFUs','RFUs')
+MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
+mytable = data.frame(cbind(Name, FullName, Deriv, Units, MeanSD))
+colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait',	'Units',	'Mean (SD)')
+mytable %>% kable(caption = "Platelet traits measured by Sysmex XN-1000", booktabs = TRUE, caption.short = "Platelet traits measured by Sysmex XN-1000") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+column_spec(2, width = "4cm")   %>%
+  column_spec(3, width = "6cm")   %>%
+  landscape()
+```
 
-After _n_ such encounters the posterior density for $\theta$ is
+```{r Linear-reg-MR, echo = FALSE, out.height="50%", out.width="85%", fig.cap="Schematic of linear regression and Mendelian randomization analyses. A) Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders. B) Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.", fig.scap = "Schematic of linear regression and Mendelian randomization analyses"}
+include_graphics(path = "figure/BMI_platelets/obsvMRexample.pdf", dpi = NA)
 
-$$
-\pi(\theta|X_1< y_1,\dots,X_n<y_n) \varpropto \pi(\theta) \prod_{i=1}^n\int_{-\infty}^{y_i}
-   \exp\left(-{(x-\theta)^2\over{2\sigma^2}}\right)\ dx
-$$
+```
 
-Another equation:
+```{r INT-participants-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+f = c("Age", "Sex", "Male", "Female", "Weight (kg)", "Height (cm)", "Body mass index (kg/m2)", "Smoking frequency", "Never", "Previous", "Current", "Alcohol intake frequency", "Rarely", "Less than once a week", "One or two times a week", "Three to five times a week / most days")
+co = c( '45.3 (14.2)', NA, '49.8%','50.2%','78.2 (16.0)','171.8 (9.6)','26.4 (4.7)', NA,'58.9%','33.3%','7.8%',NA, '12.5%','17.1%','37.7%','32.7%')
+i = c(33388, 33388, NA, NA, 33455, 33388, 33388, 32867, NA, NA, NA, 29538, NA, NA, NA, NA)
+mytable = data.frame("Variable"  = f, "Mean (SD) or %" = co, "N" = i)
+colnames(mytable) <- c("Variable",  "Mean (SD) or %", "N" )
+mytable %>% kable(caption = "Characteristics of included INTERVAL participants", booktabs = TRUE) %>% 
+  kable_classic_2(full_width = F) %>%
+  #kable_paper("hover", full_width = F)
+   add_indent(c(3, 4, 9, 10, 11, 13, 14, 15, 16), level_of_indent = 1) %>%
+ kable_styling(full_width = TRUE) %>%
+column_spec(1, width = "8cm")
+```
 
-$$\det\left|\,\begin{matrix}%
-c_0&c_1\hfill&c_2\hfill&\ldots&c_n\hfill\cr
-c_1&c_2\hfill&c_3\hfill&\ldots&c_{n+1}\hfill\cr
-c_2&c_3\hfill&c_4\hfill&\ldots&c_{n+2}\hfill\cr
-\,\vdots\hfill&\,\vdots\hfill&
-  \,\vdots\hfill&&\,\vdots\hfill\cr
-c_n&c_{n+1}\hfill&c_{n+2}\hfill&\ldots&c_{2n}\hfill\cr
-\end{matrix}\right|>0$$
+```{r Corr-mat-dend, echo = FALSE, out.height="50%", out.width="85%", fig.cap="Correlation matrix and dendrogram of the relationship between platelet traits. A) Correlation coefficients are provided within the matrix. Dark blue indicates a correlation coefficient (r) of 1, with dark red indicating a correlation coefficient of -1. B) A dendrogram showing the hierarchical relationship between platelet traits, where the height at which two platelet traits join is (1 – Pearson correlation coefficient (r)). PCT = plateletcrit, PLT (F) = platelet count (PLT-F channel), PLT (I) = platelet count (impedance channel), SSC = side scatter, SFL = side fluorescence, FSC = side scatter, IPC = immature platelet count, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, MPV = mean platelet volume, P-LCR = platelet large cell ratio, PDW = platelet distribution width. Dashed red lines indicate a height of 0.2, 0.3 and 0.4.", fig.scap= "Correlation matrix and dendrogram of the relationship between platelet traits."}
+include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = NA)
+
+```
+
+```{r BMI-platelets-adjust,  echo=FALSE}
+options(knitr.kable.NA = "")
+Name = c('PCT','PLT (I)','PLT (F)','SFL','IPC','PDW','FSC','H-IPF','IPF','P-LCR','SSC','MPV')
+N = c(24562,26044,23921,26082,23909,24563,26082,26068,23909,27015,26082,24559)
+Beta = c(0.12,0.11,0.10,0.06,0.06,0.03,0.02,-0.02,0.01,0.01,0.01,0.01)
+SE <- c(0.006,0.006,0.006,0.006,0.007,0.007,0.006,0.006,0.007,0.006,0.006,0.007)
+P <- c(9.17E-88,1.03E-67,5.62E-57,4.73E-23,4.84E-22,5.21E-05,0.01,0.01,0.04,0.19,0.28,0.37)
+R <- c(0.133,0.096,0.094,0.020,0.008,0.006,0.026,0.006,0.008,0.003,0.040,0.007)
+Eta <- c(0.107,0.081,0.082,0.000,0.001,0.004,0.001,0.005,0.007,0.000,0.000,0.000)
+CI <- c(0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.012,0.013,0.012,0.012,0.013)
+Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,0.00,0.00,-0.01,-0.01)
+Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
+mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
+colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption. Βeta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta2 is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.", booktabs = TRUE, caption.short = "Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  landscape()
+```
+
+```{r BMI-platelets-unadjust,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c('Plateletcrit','Platelet count (impedence channel)','Platelet count (PLT-F channel)','Side fluorescence','Immature platelet count' ,'Platelet distribution width' ,'Forward scatter','High fluorescence immature platelet fraction','Immature platelet fraction','Side scatter','Platelet large cell ratio','Mean platelet volume')
+Name = c('PCT','PLT (I)','PLT (F)','SFL','IPC','PDW','FSC','H-IPF','IPF','P-LCR','SSC','MPV')
+N = c(27997,29682,27268,29721,27255,27998,29721,29708,27255,29721,30788,27994)
+Beta = c(0.126,0.110,0.104,0.064,0.067,0.029,0.022,-0.017,0.015,0.010,0.010,0.009)
+SE <- c(0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006)
+P <- c(1.46E-108,4.50E-84,6.50E-70,4.08E-28,1.27E-27,2.09E-06,1.40E-04,4.43E-03,1.29E-02,7.81E-02,9.09E-02,1.55E-01)
+R <- c(0.132,0.097,0.094,0.021,0.007,0.006,0.026,0.005,0.007,0.041,0.002,0.006)
+Eta <- c(0.107,0.082,0.083,0.000,0.001,0.004,0.001,0.005,0.007,1.58E-04,4.37E-05,4.57E-06)
+CI <- c(0.011,0.011,0.012,0.011,0.012,0.012,0.011,0.012,0.012,0.011,0.011,0.012)
+Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,-0.028,0.003,-0.001,-0.002,-0.003)
+Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,-0.005,0.027,0.022,0.021)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Age and sex adjusted estimates for the association between BMI and platelet traits. Βeta coefficient is the change in platelet measure in SDs per SD higher BMI. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.", booktabs = TRUE, caption.short = "Age and sex adjusted estimates for the association between BMI and platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
 
 
-Lapidus and Pindar, Numerical Solution of Partial Differential Equations in Science and
-Engineering.  Page 54
+```{r INT-confounders-BMI-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+V = c( "Sex (1=female, 2=male)", "Age (years)", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)", "Smoking frequency (1=never, 2=occasinal, 3=most days/ every day)" )
+N = c(33388, 33388, 29538, 32867)
+B = c(0.184, 0.011, -0.096, 0.073)
+SE <- c(0.011,3.81E-04,0.006,0.009)
+P <- c(9.64E-64,1.11E-182,1.57E-61,1.53E-17)
+AdjR <- c(0.008,0.025,0.009,0.002)
+Fstat <- c(285,841,275,72)
+CI <- c(0.021,0.001,0.011,0.017)
+LowerCI <- c(0.162,0.010,-0.108,0.057)
+UpperCI <- c(0.205,0.012,-0.085,0.090)
+mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
+mytable %>% kable(caption = "Associations between covariables (exposure) and standardised BMI (outcome)", booktabs = TRUE) %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+column_spec(1, width = "5cm")   %>%
+  column_spec(3, width = "3cm")   %>%
+  landscape()
+```
 
-$$
-\int_t\left\{\sum_{j=1}^3 T_j \left({d\phi_j\over dt}+k\phi_j\right)-kT_e\right\}w_i(t)\ dt=0,
-   \qquad\quad i=1,2,3.
-$$
+```{r age-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c('Side scatter','Forward scatter','Side fluorescence','Plateletcrit','Platelet count (impedence channel)','Mean platelet volume','Platelet count (PLT-F channel)','Platelet large cell ratio','Immature platelet count' ,'Platelet distribution width','High fluorescence immature platelet fraction','Immature platelet fraction')
+Name <- c('SSC','FSC','SFL','PCT','PLT (I)','MPV','PLT (F)','P-LCR','IPC','PDW','H-IPF','IPF')
+N = c(29721,29721,29721,27997,29682,27994,27268,30788,27255,27998,29708,27255)
+Beta = c(-0.014,-0.011,-0.009,-0.009,-0.006,-0.005,-0.005,-0.003,-0.003,-0.002,0.001,-0.001)
+SE <- c(4.00E-04,4.03E-04,4.05E-04,4.18E-04,4.07E-04,4.20E-04,4.28E-04,4.01E-04,4.28E-04,4.21E-04,4.08E-04,4.29E-04)
+P <- c(4.59E-274,3.72E-160,1.20E-111,2.20E-92,3.15E-51,8.11E-39,1.09E-27,4.22E-17,1.50E-13,1.32E-06,2.17E-02,3.79E-0)
+R <- c(4.12E-02,2.41E-02,1.68E-02,1.47E-02,7.58E-03,6.01E-03,4.32E-03,2.26E-03,1.96E-03,7.99E-04,1.44E-04,1.21E-04)
+CI <- c(7.84E-04,7.91E-04,7.94E-04,8.19E-04,7.98E-04,8.22E-04,8.38E-04,7.86E-04,8.39E-04,8.24E-04,8.01E-04,8.40E-04)
+Lower <- c(-0.015,-0.012,-0.010,-0.009,-0.007,-0.006,-0.006,-0.004,-0.004,-0.003,0.000,-0.002)
+Upper <- c(-0.014,-0.010,-0.008,-0.008,-0.005,-0.005,-0.004,-0.003,-0.002,-0.001,0.002,0.000)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, CI, Lower, Upper))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Association between age and platelet traits. Βeta coefficient is the difference in platelet characteristics per 1 year increase in age.", booktabs = TRUE, caption.short = "Association between age and platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
 
-L\&P  Galerkin method weighting functions.  Page 55
+```{r sex-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c("Platelet count (PLT-F channel)",'Platelet count (impedance channel)','Plateletcrit','Immature platelet fraction','High fluorescence immature platelet fraction','Platelet distribution width','Side scatter','Immature platelet count','Forward scatter','Platelet large cell ratio','Side fluorescence','Mean platelet volume')
+Name <- c('PLT (F)','PLT (I)','PCT','IPF','H-IPF','PDW','SSC','IPC','FSC','P-LCR','SFL','MPV')
+N = c(27268,29682,27997,27255,29708,27998,29721,27255,29721,30788,29721,27994)
+Beta = c(-0.574,-0.575,-0.663,0.164,0.142,0.118,-0.076,-0.075,0.039,-0.024,-0.022,-0.014)
+SE <- c(0.012,0.011,0.011,0.012,0.012,0.012,0.012,0.012, 0.12,0.011,0.012,0.012)
+P <- c(9.88E-324,9.88E-324,9.88E-324,4.41E-42,2.24E-34,3.76E-23,5.76E-11,4.75E-10,8.06E-04,3.29E-02,5.92E-02,2.38E-01)
+R <- c(8.23E-02,8.27E-02,1.10E-01,6.72E-03,4.99E-03,3.47E-03,1.41E-03,1.39E-03,3.44E-04,1.15E-04,8.61E-05,1.39E-05)
+CI <- c(0.023,0.022,0.022,0.024,0.023,0.023,0.023,0.024,0.023,0.022,0.023,0.023)
+Lower <- c(-0.597,-0.597,-0.685,0.141,0.119,0.095,-0.099,-0.099,0.016,-0.047,-0.045,-0.038)
+Upper <- c(-0.551,-0.554,-0.641,0.188,0.164,0.142,-0.053,-0.052,0.062,-0.002,0.001,0.009)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, CI, Lower, Upper))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Association between sex and platelet traits. Beta coefficient is the difference in platelet measure in SDs in men compared with women (for sex, 1=female and 2=male).", booktabs = TRUE,caption.short = "Association between sex and platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
 
-$$
-\sum_{j=1}^3 T_j\int_0^1\left\{{d\phi_j\over dt} + k\phi_j\right\} \phi_i\ dt
-   = \int_{0}^1k\,T_e\phi_idt, \qquad i=1,2,3 $$
-
-Another L\&P (p145)
-
-$$
-\int_{-1}^1\!\int_{-1}^1\!\int_{-1}^1 f\big(\xi,\eta,\zeta\big)
-   = \sum_{k=1}^n\sum_{j=1}^n\sum_{i=1}^n w_i w_j w_k f\big( \xi,\eta,\zeta\big).
-$$
-
-Another L\&P (p126)
-
-$$
-\int_{A_e} (\,\cdot\,) dx dy = \int_{-1}^1\!\int_{-1}^1 (\,\cdot\,) \det[J] d\xi d\eta.
-$$
--->
-
-## Chemistry 101: Symbols
-
-Chemical formulas will look best if they are not italicized. Get around math mode's automatic italicizing in LaTeX by using the argument `$\mathrm{formula here}$`, with your formula inside the curly brackets.  (Notice the use of the backticks here which enclose text that acts as code.)
-
-So, $\mathrm{Fe_2^{2+}Cr_2O_4}$ is written `$\mathrm{Fe_2^{2+}Cr_2O_4}$`.
-
-<!--
-The \noindent command below does what you'd expect:  it forces the current line/paragraph to not indent. This was done here to match the format of the LaTeX thesis PDF.
--->
-
-\noindent Exponent or Superscript: $\mathrm{O^-}$
-
-\noindent Subscript: $\mathrm{CH_4}$
-
-To stack numbers or letters as in $\mathrm{Fe_2^{2+}}$, the subscript is defined first, and then the superscript is defined.
-
-\noindent Bullet: CuCl $\bullet$ $\mathrm{7H_{2}O}$
+```{r smoking-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c('High fluorescence immature platelet fraction','Immature platelet count' ,'Immature platelet fraction','Side fluorescence','Forward scatter','Mean platelet volume','Platelet large cell ratio','Platelet count (PLT-F channel)','Plateletcrit','Platelet distribution width ','Side scatter','Platelet count (impedance channel)')
+Name <- c('H-IPF','IPC','IPF','SFL','FSC','MPV','P-LCR','PLT (F)','PCT','PDW','SSC','PLT (I)')
+N = c(29241,26826,26826,29254,29254,30302,29216,26839,27553,27554,29254,29215)
+Beta = c(0.047,0.047,0.038,0.018,-0.014,0.008,0.008,0.008,0.005,0.003,0.003,0.001)
+SE <- c(0.009,0.010,0.010,0.009,0.009,0.009,0.009,0.010,0.009,0.009,0.009,0.009)
+P <- c(2.81E-07,9.60E-07,6.74E-05,5.11E-02,1.34E-01,3.63E-01,4.01E-01,4.07E-01,6.01E-01,7.31E-01,7.72E-01,9.48E-01)
+R <- c(8.67E-04,8.57E-04,5.55E-04,9.59E-05,4.26E-05,-5.66E-06,-1.01E-05,-1.17E-05,-2.64E-05,-3.20E-05,-3.13E-05,-3.41E-05)
+CI <- c(0.018,0.019,0.019,0.018,0.018,0.018,0.018,0.019,0.019,0.019,0.018,0.018)
+Lower <- c(0.029,0.028,0.019,0.000,-0.032,-0.009,-0.010,-0.011,-0.014,-0.015,-0.015,-0.017)
+Upper <- c(0.065,0.066,0.057,0.036,0.004,0.026,0.026,0.027,0.024,0.022,0.021,0.019)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, CI, Lower, Upper))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Association between smoking and platelet traits. Beta coefficient is the change in platelet traits (SDs) per unit change in smoking category (1 = never, 2 = previous, 3 = current)", booktabs = TRUE, caption.short = "Association between smoking and platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
 
 
-\noindent Delta: $\Delta$
+```{r alcohol-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c('Plateletcrit','Platelet count (impedence channel)','Platelet count (PLT-F channel)','Side scatter','Forward scatter','Mean platelet volume','Side fluorescence','Platelet large cell ratio','Immature platelet count' ,'Platelet distribution width' ,'High fluorescence immature platelet fraction','Immature platelet fraction')
+Name <- c('PCT','PLT (I)','PLT (F)','SSC','FSC','MPV','SFL','P-LCR','IPC','PDW','H-IPF','IPF')
+N = c(24757,26251,24110,26289,26289,24754,26289,27231,24098,24758,26275,24098)
+Beta = c(-0.115,-0.087,-0.074,-0.063,-0.060,-0.053,-0.042,-0.036,-0.033,-0.027,0.012,0.002)
+SE <- c(0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006,0.006)
+P <- c(6.36E-73,7.94E-45,1.94E-30,1.17E-24,3.81E-22,1.64E-16,8.90E-12,4.39E-09,2.55E-07,2.84E-05,4.52E-02,8.10E-01)
+R <- c(1.31E-02,7.45E-03,5.40E-03,3.95E-03,3.52E-03,2.70E-03,1.73E-03,1.23E-03,1.06E-03,6.67E-04,1.15E-04,-3.91E-05)
+CI <- c(0.012,0.012,0.013,0.012,0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.013)
+Lower <- c(-0.128,-0.099,-0.087,-0.076,-0.072,-0.065,-0.054,-0.048,-0.046,-0.039,0.000,-0.011)
+Upper <- c(-0.103,-0.075,-0.062,-0.051,-0.048,-0.040,-0.030,-0.024,-0.021,-0.014,0.025,0.014)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, CI, Lower, Upper))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "Association between alcohol consumption and platelet traits. Beta coefficient is the change in platelet traits in SDs per unit increase in alcohol consumption (1=Rarely , 2= Less than weekly, 3=One or two weekly, 4= 3-5 weekly or every day) ", booktabs = TRUE, caption.short = "Association between alcohol consumption and platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
+ 
+```{r INT-GRS-confounders-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+V = c("BMI (SDs)", "Age (years)", "Sex (1=female, 2=male)", "Smoking frequency (1=never, 2=previous, 3=current", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)")
+N = c(33388, 33388, 33388, 32867, 29538)
+B = c(0.69,-1.46,-0.01,0.05,-0.15)
+SE <- c(0.018,0.26,0.009,0.012,0.02)
+P <- c(2.3E-312,2.2E-08,4.7E-01,9.2E-05,2.9E-15)
+AdjR <- c(0.042,0.001,-1.4E-05,0.0004,0.002)
+Fstat <- c(1458.4,31.3,0.5,15.3,62.4)
+mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
+mytable %>% kable(caption = "Association between genetic risk score for BMI with both BMI and covariables. Βeta coefficient is the change in outcome variable per unit increase in the genetic risk score for BMI", booktabs = TRUE, caption.short = "Association between genetic risk score for BMI with both BMI and covariables") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+column_spec(1, width = "5cm")   %>%
+  landscape()
+```
+ 
+```{r BMI-platelets-MR,  echo=FALSE}
+options(knitr.kable.NA = "")
+FullName <- c('Side fluorescence','Immature platelet count' ,'Forward scatter','Plateletcrit','Immature platelet fraction','Platelet count (impedence channel)','Platelet large cell ratio','Platelet distribution width' ,'Mean platelet volume','Platelet count (PLT-F channel)','Side scatter','High fluorescence immature platelet fraction')
+Name = c('SFL','IPC','FSC','PCT','IPF','PLT (I)','P-LCR','PDW','MPV','PLT (F)','SSC','H-IPF')
+N = c(29721,27255,29721,27997,27255,29682,30788,27998,27994,27268,29721,29708)
+Beta = c(0.083,0.064,0.052,0.052,0.044,0.035,0.034,0.035,0.029,0.026,0.018,0.015)
+SE <- c(0.028,0.030,0.028,0.029,0.030,0.028,0.028,0.029,0.029,0.030,0.028,0.028)
+P <- c(3.44E-03,3.15E-02,6.62E-02,7.22E-02,1.34E-01,2.19E-01,2.25E-01,2.29E-01,3.23E-01,3.81E-01,5.37E-01,6.10E-01)
+R <- c(0.132,0.097,0.094,0.021,0.007,0.006,0.026,0.005,0.007,0.041,0.002,0.006)
+Eta <- c(0.107,0.082,0.083,0.000,0.001,0.004,0.001,0.005,0.007,1.58E-04,4.37E-05,4.57E-06)
+CI <- c(0.056,0.058,0.056,0.057,0.058,0.056,0.055,0.057,0.057,0.058,0.056,0.056)
+Lower <- c(0.027,0.006,-0.003,-0.005,-0.014,-0.021,-0.021,-0.022,-0.028,-0.032,-0.038,-0.041)
+Upper <- c(0.139,0.122,0.108,0.110,0.103,0.091,0.088,0.093,0.086,0.084,0.073,0.070)
+Wu <- c(0.973,0.672,0.774,0.0003,0.334,0.001,0.527,0.936,0.746,0.001,0.433,0.223)
+Fstat <- c(676,641,652,706,603,729,678,625,614,671,661,650)
+mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper, Wu, Fstat))
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
+mytable %>% kable(caption = "Mendelian randomization estimates for the effect of BMI on platelet traits. Βeta coefficient is the change in platelet measure in SDs per SD higher BMI", booktabs = TRUE, caption.short = "Mendelian randomization estimates for the effect of BMI on platelet traits") %>% 
+  kable_classic_2(full_width = F) %>%
+ kable_styling(full_width = TRUE) %>%
+  column_spec(1, width = "6cm")   %>%
+  landscape()
+```
 
-\noindent Reaction Arrows: $\longrightarrow$ or  $\xrightarrow{solution}$
 
-\noindent Resonance Arrows: $\leftrightarrow$
+```{r BMI-platelet-forest, echo = FALSE, fig.cap="Forest plot of the Mendelian randomization (MR) and unadjusted observational estimates for the effect of BMI on platelet traits. Estimate points are filled where P < 0.05. SFL = side fluorescence, IPC = immature platelet count, H-IPF = high fluorescence immature platelet function, FSC = forward scatter, P-LCR = platelet large cell ratio, PDW = platelet distribution width, MPV = mean platelet volume, PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SSC = side scatter.", fig.scap = "Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits."}
+include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi = NA)
 
-\noindent Reversible Reaction Arrows: $\rightleftharpoons$
+```
 
-### Typesetting reactions
+```{r COPTIC-participants-platelets,  echo=FALSE}
+options(knitr.kable.NA = "")
+f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 109/L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 109/L)')
+co = c('66.7 (11.9)', NA, '24.9 %','75.1 %','27.9 (4.6)', NA,' 38.5 %','47.4 %','8.3 %','1.9 %','3.9 %', NA, '26.6 %','50.7 %','22.5 %','0.2 %','138.2 (50.1)','53.0 (28.2)','86.9 (62.1)','200.0 (50.1)','209.8 (60.5)','10.6 (1.0)','3.2 (1.9)' ,'6.3 (3.4)')
+i = c(2502,2518,NA,NA,2422,2469,NA,NA,NA,NA,NA,2467,NA,NA,NA,NA,2377,2363,2375,2373,2409,2400,2379,2383)
+mean <- c('63.9 (16.1)',NA, '38.2 %' ,'61.8 %','27.2 (4.9)', NA, '50.8 %','38.4 %','6.3 %','2.1 %','2.4 %', NA, '100 %', NA, NA, NA,'141 (46.5)','56.8 (32.3)','148.9 (52.4)','198.7 (50.0)','200.9 (57.6)','10.6 (0.98)','3.3 (2.0)','6.2 (3.3)')
+n <- c(655,655,NA,NA,649,654,NA,NA,NA,NA,NA,655,NA,NA,NA,NA,625,621,623,623,637,634,628,629)
+mytable = data.frame("Variable"  = f, "Mean (SD) or % (all)" = co, "N (all)" = i, "Mean (SD) or % (included)" = mean, "N (included)" = n)
+colnames(mytable) <- c("Variable",  "Mean (SD) or % (all)", "N (all)", "Mean (SD) or % (included)", "N (included)" )
+mytable %>% kable(caption = "Characteristics of COPTIC study participants", booktabs = TRUE) %>% 
+  kable_classic_2(full_width = F) %>%
+  #kable_paper("hover", full_width = F)
+   add_indent(c(3, 4, 7:11, 13:16), level_of_indent = 1) %>%
+ kable_styling(full_width = TRUE) %>%
+column_spec(1, width = "8cm")
+```
 
-You may wish to put your reaction in an equation environment, which means that LaTeX will place the reaction where it fits and will number the equations for you. 
+```{r IPC-aggregation, echo = FALSE, out.height="70%", out.width="85%", fig.cap="Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants. A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.", fig.scap = "Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants"}
+include_graphics(path = "figure/BMI_platelets/IPC_aggregation.pdf", dpi = NA)
 
-\begin{equation}
-  \mathrm{C_6H_{12}O_6  + 6O_2} \longrightarrow \mathrm{6CO_2 + 6H_2O}
-  (\#eq:reaction)
-\end{equation}
+```
 
-We can reference this combustion of glucose reaction via Equation \@ref(eq:reaction).
+```{r BMI-platelet-cartoon, echo = FALSE, out.height="80%", out.width="85%", fig.cap="Graphical summary of findings"}
+include_graphics(path = "figure/BMI_platelets/Visual_abstract.pdf", dpi = NA)
 
-### Other examples of reactions
-
-$\mathrm{NH_4Cl_{(s)}}$ $\rightleftharpoons$ $\mathrm{NH_{3(g)}+HCl_{(g)}}$
-
-\noindent $\mathrm{MeCH_2Br + Mg}$ $\xrightarrow[below]{above}$ $\mathrm{MeCH_2\bullet Mg \bullet Br}$
-
-## Physics
-
-Many of the symbols you will need can be found on the math page <http://web.reed.edu/cis/help/latex/math.html> and the Comprehensive LaTeX Symbol Guide (<http://mirror.utexas.edu/ctan/info/symbols/comprehensive/symbols-letter.pdf>).
-
-## Biology
-
-You will probably find the resources at <http://www.lecb.ncifcrf.gov/~toms/latex.html> helpful, particularly the links to bsts for various journals. You may also be interested in TeXShade for nucleotide typesetting (<http://homepages.uni-tuebingen.de/beitz/txe.html>).  Be sure to read the proceeding chapter on graphics and tables.
-
+```
